--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 insta-events
+  p welcome to insta events
+  ul
+    li
+      a(href="/register") register
+    li 
+      a(href="/login") login
