Completed basic user register

--- a/views/user/register.jade
+++ b/views/user/register.jade
@@ -29,4 +29,8 @@ block content
       li 
         input(type="text", name="last", placeholder="Last Name", value="#{last}")
       li 
+        input(type="password", name="password", placeholder="Password")
+      li
+        input(type="password", name="password2", placeholder="Confirm Password")
+      li 
         input(type="submit", value="register")
