--- a/views/user/register.jade
+++ b/views/user/register.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
 
-  //- hepler variables
+  //- variables
   - var id = user ? user.id : ''
   - var email = user ? user.email : ''
   - var first = user ? user.first : ''
