--- a/views/user/login.jade
+++ b/views/user/login.jade
@@ -2,24 +2,24 @@ extends ../layout
 
 block content
 
-  //- variables
-  - var id = user ? user.id : ''
-
   //- title
   h1 login
-
-  //- register form
-  form(class="login", method="POST", action="/login")
-    ul
-      li 
-        input(type="text", name="id", placeholder="User ID", value="#{id}")
-      li
-        input(type="password", name="password", placeholder="Password")
-      li 
-        input(type="submit", value="login")
 
   //- errors if any
   if errors
     div.error
       each error in errors
-        span= error.msg
+        span= error
+
+  //- register form
+  form(class="login", method="POST", action="/login")
+    ul
+      li 
+        input(type="text", name="username", placeholder="User ID")
+      li
+        input(type="password", name="password", placeholder="Password")
+      li 
+        input(type="submit", value="login")
+
+  p
+    a(href="/register") register
