--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,5 @@
 extends layout
 
 block content
-  h1 insta-events
-  p welcome to insta events
-  ul
-    li
-      a(href="/register") register
-    li 
-      a(href="/login") login
+  h1 insta events
+  p welcome #{user.first}
