--- a/views/user/register.jade
+++ b/views/user/register.jade
@@ -11,28 +11,29 @@ block content
   //- title
   h1 register
 
-  //- errors if any
-  if errors
-    div.error
-      p There are some problems with the following fields =)
-      ul
-        each error in errors
-          li= error.msg
+  //- login
+  p
+    a(href="/login") login
 
   //- register form
   form(class="register", method="POST", action="/register")
-    ul
-      li 
-        input(type="text", name="id", placeholder="User ID", value="#{id}")
-      li
-        input(type="text", name="email", placeholder="Email", value="#{email}")
-      li 
-        input(type="text", name="first", placeholder="First Name", value="#{first}")
-      li 
-        input(type="text", name="last", placeholder="Last Name", value="#{last}")
-      li 
-        input(type="password", name="password", placeholder="Password")
-      li
-        input(type="password", name="password2", placeholder="Confirm Password")
-      li 
-        input(type="submit", value="register")
+    div 
+      input(type="text", name="id", placeholder="User ID", value="#{id}")
+    div
+      input(type="text", name="email", placeholder="Email", value="#{email}")
+    div 
+      input(type="text", name="first", placeholder="First Name", value="#{first}")
+    div 
+      input(type="text", name="last", placeholder="Last Name", value="#{last}")
+    div 
+      input(type="password", name="password", placeholder="Password")
+    div
+      input(type="password", name="password2", placeholder="Confirm Password")
+    //- errors if any
+    if errors
+      div.error
+        ul
+          each error in errors
+            li= error.msg
+    div 
+      input(type="submit", value="register")
