--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,13 +5,18 @@ a { color: #00B7FF; }
 /* Register Form */
 form.register ul { margin: 0; padding: 0; list-style: none; }
 
+/* Register Form Error */
+.error { color: red; }
+.error p { margin: 0; padding: 0; }
+.error ul { margin: 0 0 15px 0; }
+
 /* Login Form */
 form.login ul { margin: 0; padding: 0; list-style: none; }
 
 /* Event Form */
 form.event ul { margin: 0; padding: 0; list-style: none; }
 
-/* Register Form Error */
-.error { color: red; }
-.error p { margin: 0; padding: 0; }
-.error ul { margin: 0 0 15px 0; }
+/* Events List */
+.events { margin: 0; padding: 0; list-style: none; }
+.events .event { margin: 0 0 10px 0; background-color: #f0f0f0; }
+.events .event span { display: block; }
