--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
   head
-    title= events
+    title ievents
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
