--- a/views/event/list.jade
+++ b/views/event/list.jade
@@ -19,5 +19,5 @@ block content
           span.title= event.name
           span.desc= event.desc
           span.dates #{event.start} - #{event.end}
-          span.tags= event.tags
+          span.tag &#35;#{event.tag}
           input(type="submit", value="delete")
