--- a/views/event/list.jade
+++ b/views/event/list.jade
@@ -16,7 +16,8 @@ block content
         form.event(method="POST", action="/events")
           input(type="hidden", name="_method", value="delete")
           input(type="hidden", name="_id", value="#{event._id}")
-          span.title= event.name
+          a(href='/events/#{event._id}')
+            span.title= event.name
           span.desc= event.desc
           span.dates #{event.start} - #{event.end}
           span.tag &#35;#{event.tag}
