--- a/views/event/list.jade
+++ b/views/event/list.jade
@@ -13,12 +13,14 @@ block content
   ul.events
     each event in events
       li
-        form.event(method="POST", action="/events")
-          input(type="hidden", name="_method", value="delete")
-          input(type="hidden", name="_id", value="#{event._id}")
+        div.event
           a(href='/events/#{event._id}')
             span.title= event.name
           span.desc= event.desc
           span.dates #{event.start} - #{event.end}
           span.tag &#35;#{event.tag}
-          input(type="submit", value="delete")
+          a.download(href="/events/#{event._id}/download") download
+          form(method="POST", action="/events")
+            input(type="hidden", name="_method", value="delete")
+            input(type="hidden", name="_id", value="#{event._id}")
+            input(type="submit", value="delete")
