--- a/views/layout.jade
+++ b/views/layout.jade
@@ -58,7 +58,7 @@ html
 	body
 		header
 			h1.logo
-				a(href="#home") App_Logo
+				a(href="/") App_Logo
 					img
 		div#main_content			
 			block content
