--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,31 @@
     A set of useful LESS mixins
     More info at: http://lesselements.com
   ---------------------------------------------------*/
+/* make keyframes that tell the start state and the end state of our object */
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 /**
  * html5doctor.com Reset Stylesheet v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/)
  * Richard Clark (http://richclarkdesign.com)
@@ -172,14 +197,6 @@ Custom style starts here
 .fixed {
   position: fixed;
 }
-header {
-  padding: 20px;
-  background: #fff;
-  width: 100%;
-  -webkit-box-shadow: 5px 0px 2px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 5px 0px 2px rgba(0, 0, 0, 0.25);
-  box-shadow: 5px 0px 2px rgba(0, 0, 0, 0.25);
-}
 h1,
 h2,
 h3,
@@ -207,6 +224,20 @@ h5 {
 h6 {
   font-size: 16px;
 }
+/* Global Header */
+header {
+  padding: 20px;
+  background: #fff;
+  -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+  filter: alpha(opacity=80);
+}
 header h1.logo {
   font-family: 'Poiret One', cursive;
   font-size: 24px;
@@ -214,6 +245,16 @@ header h1.logo {
 h1.title {
   float: left;
   margin: 12px 0;
+}
+img.background_img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /*.blur(5px);
+  .opacity(0.5);*/
+
+  z-index: -999;
 }
 #main_content {
   margin: 0 auto;
@@ -242,10 +283,21 @@ a:active {
 .action_menu > ul > li {
   list-style: none;
   display: inline;
-  padding: 0 30px;
-  border-left: dashed 1px #888;
+  padding: 30px;
+  font-size: 18px;
 }
-.action_menu > ul > li:last-child {
+.action_menu > ul > li:hover {
+  background-color: #222;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+.fixed > .action_menu > ul > li {
+  border-left: dashed 1px #888;
+  font-size: 14px;
+}
+.fixed > .action_menu > ul > li:last-child {
   border-right: dashed 1px #888;
 }
 /* Register Form */
@@ -278,18 +330,6 @@ form.event ul {
   list-style: none;
 }
 /* Events List */
-.content_header.fixed {
-  /*top: 65px;*/
-  top: 0;
-  width: 95%;
-  background: #fff;
-  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-}
-.content_header.fixed h1.title {
-  margin-left: 36px;
-}
 .events {
   margin: 0;
   padding: 0;
@@ -298,7 +338,7 @@ form.event ul {
 .event {
   margin: 0 0 10px 0;
   clear: both;
-  text-shadow: -1px -1px rgba(255, 255, 255, 0.1);
+  text-shadow: 0px 0px 50px rgba(255, 255, 255, 0.7);
 }
 .event a:link {
   text-decoration: none;
@@ -317,22 +357,126 @@ form.event ul {
   font-style: oblique;
   font-size: 20px;
 }
+/* Content Header */
+.content_header {
+  -webkit-transition: webkit-opacity 0.2s ease-out;
+  -moz-transition: moz-opacity 0.2s ease-out;
+  -o-transition: opacity 0.2s ease-out;
+  transition: opacity 0.2s ease-out;
+}
+.content_header.fixed {
+  top: 0;
+  width: 95%;
+  background: #fff;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+  -moz-opacity: 0.9;
+  -khtml-opacity: 0.9;
+  -webkit-opacity: 0.9;
+  opacity: 0.9;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=90);
+  filter: alpha(opacity=90);
+  -webkit-transition: webkit-opacity 0.2s ease-in;
+  -moz-transition: moz-opacity 0.2s ease-in;
+  -o-transition: opacity 0.2s ease-in;
+  transition: opacity 0.2s ease-in;
+  z-index: 999999;
+}
+.content_header.fixed:hover {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+  -webkit-transition: webkit-opacity 0.2s ease-in;
+  -moz-transition: moz-opacity 0.2s ease-in;
+  -o-transition: opacity 0.2s ease-in;
+  transition: opacity 0.2s ease-in;
+}
+.content_header.fixed h1.title {
+  margin-left: 36px;
+}
 /* Media List */
 .media {
   margin: 0;
   padding: 0;
   list-style: none;
+  text-align: center;
 }
 .media img {
   margin: 2px;
   padding: 0;
-  float: left;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
   width: 150px;
   height: 150px;
+}
+.media img.fade1 {
+  opacity: 0;
+  /* make things invisible upon start */
+
+  -webkit-animation: fadeIn ease-in 1;
+  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
+  -webkit-animation-fill-mode: forwards;
+  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.2s;
+  -moz-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+.media img.fade2 {
+  opacity: 0;
+  /* make things invisible upon start */
+
+  -webkit-animation: fadeIn ease-in 1;
+  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
+  -webkit-animation-fill-mode: forwards;
+  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.4s;
+  -moz-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+.media img.fade3 {
+  opacity: 0;
+  /* make things invisible upon start */
+
+  -webkit-animation: fadeIn ease-in 1;
+  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
+  -webkit-animation-fill-mode: forwards;
+  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.6s;
+  -moz-animation-delay: 0.6s;
+  animation-delay: 0.6s;
 }
 .media img:hover {
   cursor: pointer;
