--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -5,6 +5,9 @@
     More info at: http://lesselements.com
   ---------------------------------------------------*/
 
+.text-shadow (@string: 0 1px 3px rgba(0, 0, 0, 0.25)) {
+  text-shadow: @string;
+}
 .gradient(@color: #F5F5F5, @start: #EEE, @stop: #FFF) {
   background: @color;
   background: -webkit-gradient(linear,
@@ -104,6 +107,13 @@
   -o-transition: all @duration @ease;
   transition: all @duration @ease;
 }
+.transitionHeight(@duration:0.2s, @ease:ease-out) {
+  -webkit-transition: webkit-opacity @duration @ease;
+  -moz-transition: moz-opacity @duration @ease;
+  -o-transition: opacity @duration @ease;
+  transition: opacity @duration @ease;
+}
+
 .inner-shadow(@horizontal:0, @vertical:1px, @blur:2px, @alpha: 0.4) {
   -webkit-box-shadow: inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
   -moz-box-shadow: inset @horizontal @vertical @blur rgba(0, 0, 0, @alpha);
@@ -124,8 +134,8 @@
   -webkit-user-select: @argument;
   -moz-user-select: @argument;
   -ms-user-select: @argument;
-  user-select: @argument;
-}
+  user-select: @argument
+;}
 .columns(@colwidth: 250px, @colcount: 0, @colgap: 50px, @columnRuleColor: #EEE, @columnRuleStyle: solid, @columnRuleWidth: 1px) {
   -moz-column-width: @colwidth;
   -moz-column-count: @colcount;
@@ -154,7 +164,37 @@
   -webkit-background-clip: @argument;
   background-clip: @argument;
 }
+.blur(@radius: 2px) {
+  -webkit-filter: blur(@radius);
+  -moz-filter: blur(@radius);
+  -o-filter: blur(@radius);
+  -ms-filter: blur(@radius);
+  filter: blur(@radius);
+}
 
+/* make keyframes that tell the start state and the end state of our object */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+ 
+.fade-in(@duration: 1s, @delay: 0s) {
+    opacity:0;  /* make things invisible upon start */
+    -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+ 
+    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+ 
+    -webkit-animation-duration: @duration;
+    -moz-animation-duration: @duration;
+    animation-duration: @duration;
+
+    -webkit-animation-delay: @delay;
+    -moz-animation-delay: @delay;
+    animation-delay: @delay;
+}
 
 
 /**
@@ -255,7 +295,7 @@ Custom style starts here
 
 .fixed { position: fixed; }
 
-header { padding: 20px; background: #fff; width: 100%; .drop-shadow(5px, 0px, 2px, 0.25); }
+
 
 h1, h2, h3, h4, h5, h6 { font-family: 'Poiret One', cursive; font-weight: normal; }
 
@@ -266,8 +306,20 @@ h4 { font-size: 28px; }
 h5 { font-size: 18px; }
 h6 { font-size: 16px; }
 
+/* Global Header */
+header { padding: 20px; background: #fff; .drop-shadow(0px, 0px, 2px, 0.25); .opacity(0.8); }
 header h1.logo { font-family: 'Poiret One', cursive; font-size: 24px;}
 h1.title { float: left; margin: 12px 0; }
+
+img.background_img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /*.blur(5px);
+  .opacity(0.5);*/
+  z-index: -999;
+}
 
 #main_content { margin: 0 auto; width: 95%;}
 
@@ -278,8 +330,11 @@ a:active { text-decoration: none; }
 /* Menus */
 .action_menu { float: right; margin-left: 50px; margin-right: 20px; height: 100%; vertical-align: middle; padding: 32px 0; }
 .action_menu > ul {}
-.action_menu > ul > li { list-style: none; display: inline; padding: 0 30px; border-left: dashed 1px #888;}
-.action_menu > ul > li:last-child { border-right: dashed 1px #888;}
+.action_menu > ul > li { list-style: none; display: inline; padding: 30px; font-size: 18px; }
+.action_menu > ul > li:hover { background-color: #222; .transition(0.2s); }
+
+.fixed > .action_menu > ul > li { border-left: dashed 1px #888; font-size: 14px; }
+.fixed > .action_menu > ul > li:last-child { border-right: dashed 1px #888;}
 
 /* Register Form */
 form.register ul { margin:0; padding:0; list-style:none; }
@@ -296,29 +351,55 @@ form.login ul { margin:0; padding:0; list-style:none; }
 form.event ul { margin:0; padding:0; list-style:none; }
 
 /* Events List */
-.content_header.fixed { /*top: 65px;*/ top: 0; width: 95%; background: #fff; .drop-shadow(0px, 1px, 2px, 0.25); }
-.content_header.fixed h1.title { margin-left: 36px; }
 
 .events { margin:0; padding:0; list-style:none; }
-.event { margin:0 0 10px 0; clear: both; text-shadow: -1px -1px rgba(255, 255, 255, 0.1); }
+.event { margin:0 0 10px 0; clear: both; .text-shadow(0px 0px 50px rgba(255, 255, 255, 0.7)); }
 .event a:link { text-decoration:none; }
 .event span { display:block; margin: 12px 0; }
 .event span.title { font-weight:900; }
 .event span.desc { font-weight:100; }
 .event span.tag { font-style:oblique; font-size: 20px; }
 
-/* Media List */
-.media { margin:0; padding:0; list-style:none; }
+/* Content Header */
+.content_header { .transitionHeight(0.2s, ease-out); }
+.content_header.fixed { 
+  top: 0; 
+  width: 95%; 
+  background: #fff; 
+  .drop-shadow(0px, 1px, 2px, 0.25); 
+  .opacity(0.9); 
+  .transitionHeight(0.2s, ease-in);
+  z-index: 999999;
+}
+.content_header.fixed:hover { 
+  .opacity(1); 
+  .transitionHeight(0.2s, ease-in);
+}
+.content_header.fixed h1.title { margin-left: 36px; }
 
+/* Media List */
+.media { 
+  margin:0; 
+  padding:0; 
+  list-style:none; 
+  text-align: center;
+}
 .media img { 
   margin: 2px; 
-  padding:0; 
-  float:left;   
+  padding:0;  
   .transition(0.2s, ease-out);
   width: 150px;
   height: 150px;
 }
-
+.media img.fade1 {
+  .fade-in(1s, 0.2s);
+}
+.media img.fade2  {
+  .fade-in(1s, 0.4s);
+}
+.media img.fade3  {
+  .fade-in(1s, 0.6s);
+}
 .media img:hover {
   cursor: pointer;
   background-color: #0073B2;
