Removed some unused code. Added album share capability. WIP album view

--- a/views/event/list.jade
+++ b/views/event/list.jade
@@ -19,8 +19,10 @@ block content
           span.desc= event.desc
           span.dates #{event.start} - #{event.end}
           span.tag &#35;#{event.tag}
-          a.download(href="/events/#{event._id}/download") download
-          a.share(href="/events/#{event._id}/share") share
+          span 
+            a.download(href="/events/#{event._id}/download") download
+          span 
+            a.share(href="/events/#{event._id}/share") share
           form(method="POST", action="/events")
             input(type="hidden", name="_method", value="delete")
             input(type="hidden", name="_id", value="#{event._id}")
