--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -494,5 +494,19 @@ form.event ul {
   margin-bottom: 6px;
   /*  width: 160px;
   height: 160px;*/
+}
 
+
+/* added by Leo */
+.media img.selected {
+  cursor: pointer;
+  background-color: #0073B2;
+  margin: -2px 6px 6px -2px;
+  -webkit-box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+  -webkit-transition: all;
+  -moz-transition: all;
+  -o-transition: all;
+  transition: all;
 }
