--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -299,7 +299,7 @@ Custom style starts here
 
 h1, h2, h3, h4, h5, h6 { font-family: 'Poiret One', cursive; font-weight: normal; }
 
-h1 { font-size: 52px; }
+h1 { font-size: 52px; line-height: 130%; }
 h2 { font-size: 48px; }
 h3 { font-size: 32px; }
 h4 { font-size: 28px; }
@@ -308,7 +308,7 @@ h6 { font-size: 16px; }
 
 /* Global Header */
 header { padding: 20px; background: #fff; .drop-shadow(0px, 0px, 2px, 0.25); .opacity(0.8); }
-header h1.logo { font-family: 'Poiret One', cursive; font-size: 24px;}
+header h1.logo a { font-family: 'Poiret One', cursive; font-size: 100%;}
 h1.title { float: left; margin: 12px 0; }
 
 img.background_img {
