--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -408,10 +408,10 @@ form.event ul {
 .media img {
   margin: 2px;
   padding: 0;
-  -webkit-transition: all 0.2s ease-out;
+  /*-webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   -o-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;*/
   width: 150px;
   height: 150px;
 }
@@ -511,3 +511,4 @@ form.event ul {
   transition: all;
 }
 .action_menu > ul > li.remove.hidden { display: none; }
+.lazy-loading { padding: 25px; text-align: center; }
