--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
 	body
 		header
 			h1.logo
-				a(href="/") App_Logo
-					img
+				a(href="/") Capulati
+					img(src="/images/logo3.png")
 		div#main_content			
 			block content
