Added less dependency. Fixed css issue on event admin

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -405,3 +405,16 @@ form.event ul { margin:0; padding:0; list-style:none; }
 /*  width: 160px;
   height: 160px;*/
 }
+
+/* added by Leo */
+.action_menu > ul > li.remove.hidden { display: none; }
+.media img.selected {
+  cursor: pointer;
+  background-color: #0073B2;
+  .drop-shadow(1px, 1px, 20px, 0.8);
+  .transition(0s, ease-in);
+  margin-top: -2px;
+  margin-left: -2px;
+  margin-right: 6px;
+  margin-bottom: 6px;
+}
