--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -507,3 +507,21 @@ form.event ul {
   height: 160px;*/
 
 }
+
+/* added by Leo */
+.action_menu > ul > li.remove.hidden { display: none; }
+.media img.selected {
+  cursor: pointer;
+  background-color: #0073B2;
+  -webkit-box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.8);
+  -webkit-transition: all 0s ease-in;
+  -moz-transition: all 0s ease-in;
+  -o-transition: all 0s ease-in;
+  transition: all 0s ease-in;
+  margin-top: -2px;
+  margin-left: -2px;
+  margin-right: 6px;
+  margin-bottom: 6px;
+}
