Removed unused code

--- a/views/event/get2.jade
+++ b/views/event/get2.jade
@@ -1,8 +1,6 @@
 extends ../layout
 
 block scripts
-  script(type="text/javascript", src="/javascripts/libs/waypoints.min.js")
-  script(type="text/javascript", src="/javascripts/libs/waypoints-infinite.min.js")
   script(type="text/javascript", src="/javascripts/event_admin.js")
 
 block content
@@ -21,7 +19,7 @@ block content
       div.action_menu
         ul
           li(class="remove hidden")
-            a(href="#remove") Remove
+            a(href="javascript:void(0);") Remove
           li(class="download")
             a(href="#{event._id}/download") Download
 
@@ -39,5 +37,3 @@ block content
           img.item(src="#{medium.images.thumbnail.url}", id="#{medium.id}")
       else
         div no images at this time
-    div.lazy-loading
-      a.more(href="/events/#{event._id}/more") more
