--- a/views/event/get.jade
+++ b/views/event/get.jade
@@ -1,10 +1,11 @@
 extends ../layout
 
 block scripts
-  script(type='text/javascript', src='/javascripts/libs/jquery.viewport.mini.js')
-  script(type="text/javascript", src="/javascripts/event_admin.js")
-  script.
-    adminInit('#{event._id}', '#{media[media.length - 1].id}');
+  if media.length > 0
+    script(type='text/javascript', src='/javascripts/libs/jquery.viewport.mini.js')
+    script(type="text/javascript", src="/javascripts/event_admin.js")
+    script.
+        adminInit('#{event._id}', '#{media[media.length - 1].id}');
 
 block content
 
